[tool.poetry]
name = "steamlit"
version = "0.1.0"
description = ""
authors = ["zoohta <koh.0430.ta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
openai = "^0.27.2"
streamlit-chat = "^0.0.2.2"
langchain = "^0.0.109"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
